# lithuanian-declension-rs

./: Cargo.toml  index.html  style.css
src/: declension.rs  declension_adjective.rs  game.rs  lib.rs  main.rs
