[package]
name = "noundecl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idna = "0.4.0"
leptos = { version = "0.4.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.4.8", features = ["nightly", "csr"] }
rand = "0.8.5"
